--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,22 +6,38 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 12px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  margin-top: 16px;
+  font-size: 15px;
+  font-weight: 550;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 16px;
+  padding-left: 8px;
+  font-size: 15px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  content: top;
+  padding: 8px
 }
 
 button {
   background: white;
-  border: 1px solid #eee;
+  border: 1px;
+  padding: 8px 24px;
+  display: block;
+  margin: 0 auto;
 }
